// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogReplyTags - Snapshots > matches snapshot with empty tags 1`] = `
<div
  class="flex flex-col gap-1"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex flex-wrap items-center gap-2"
    data-override-defaults="true"
    data-testid="container"
  >
    <button
      data-testid="add-tag-button"
    >
      +
    </button>
  </div>
</div>
`;

exports[`DialogReplyTags - Snapshots > matches snapshot with input open 1`] = `
<div
  class="flex flex-col gap-1"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex flex-wrap items-center gap-2"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      data-testid="tag-input-wrapper"
    >
      <input
        data-testid="tag-input"
        placeholder="add tag"
        value=""
      />
      <button
        aria-label="Open emoji picker"
        data-testid="emoji-button"
      >
        😀
      </button>
      <button
        aria-label="Close tag input"
        data-testid="close-button"
      >
        ×
      </button>
    </div>
  </div>
</div>
`;

exports[`DialogReplyTags - Snapshots > matches snapshot with tags (tags not rendered by this component) 1`] = `
<div
  class="flex flex-col gap-1"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex flex-wrap items-center gap-2"
    data-override-defaults="true"
    data-testid="container"
  >
    <button
      data-testid="add-tag-button"
    >
      +
    </button>
    <span
      class="text-muted-foreground"
      data-as="span"
      data-size="sm"
      data-testid="typography"
    >
      2
      /
      5
    </span>
  </div>
</div>
`;
